<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="spread_inside" android:textStyle="bold" android:textSize="30sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout" app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            android:layout_marginBottom="10dp">
        <TextView
                android:text="@string/leftQuestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/leftQuestion1" android:layout_weight="1"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rightQuestion1" android:layout_weight="1"
                android:text="@string/rightQuestion1" android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/answer1" android:layout_weight="1" android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="58dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:id="@+id/linearLayout3">
        <TextView
                android:text="@string/leftHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/leftHeaderTextView" android:layout_weight="1"
                android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"/>
        <TextView
                android:text="@string/rightHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rightHeaderTextView" android:layout_weight="1"
                android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"/>
        <TextView
                android:text="@string/answerHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/answerHeaderTextView" android:layout_weight="1"
                android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="61dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center|end" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:id="@+id/linearLayout4">
        <TextView
                android:text="@string/leftQuestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/leftQuestion3" android:layout_weight="1"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/rightQuestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rightQuestion3" android:layout_weight="1"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/answer3" android:layout_weight="1" android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="74dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout2" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
                android:text="@string/leftQuestion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/leftQuestion2" android:layout_weight="1"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/rightQuestion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rightQuestion2" android:layout_weight="1"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/answer2" android:layout_weight="1" android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="71dp"
            android:gravity="center" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/leftQuestion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/leftQuestion4" android:layout_weight="1"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/rightQuestion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rightQuestion4" android:layout_weight="1"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/answer4" android:layout_weight="1" android:textAlignment="center"/>
    </LinearLayout>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkAnswers" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>